--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.2",
+    "react-insta-stories": "^2.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
